cabal-version:      2.4
name:               bs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable bs
    main-is:          Main.hs
    ghc-options: -threaded

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base
            , extra
            , dependent-map
            , dependent-sum
            , containers
            , async
            , random
            , free
            , shake
            , reflex
            , reflex-basic-host
            , mtl
            , transformers
            , ref-tf
            , algebraic-graphs
            , ghcide
            , hashable
            , binary
            , deepseq
            , unordered-containers
            , data-default
            , stm
    hs-source-dirs:   app
    default-language: Haskell2010
